--- a/quickstart_fullwidth_layouts/quickstart_fullwidth_layouts.info.yml
+++ b/quickstart_fullwidth_layouts/quickstart_fullwidth_layouts.info.yml
@@ -10,4 +10,4 @@ dependencies:
   # @todo Discuss removing in https://www.drupal.org/project/drupal/issues/2935999.
   - drupal:field_ui
   # @todo Discuss removing in https://www.drupal.org/project/drupal/issues/3003610.
-  - drupal:block'
+  - drupal:block
